fixed long urls causing text to cut off (#119)

--- a/_sass/_events.scss
+++ b/_sass/_events.scss
@@ -61,6 +61,7 @@
     border-radius: 10px;
     padding: 4rem 2rem;
     margin: 1rem 0;
+    word-break: break-word;
   }
 
   &__banner {
